--- a/Aula07/exemplo/styles.css
+++ b/Aula07/exemplo/styles.css
@@ -31,12 +31,16 @@ ul li a:hover{ /* Altera ao passar o mouse */
 /* Corpo da nossa pagina */
 
 main{
-    width: 100vw;
+    display: flex;
+    justify-content: center;
+    width: 90vw;
     height: 90vh;
 }
 
 #principal{
+    margin: 2%;
     display: flex;
+    width: 80%;
     gap: 3;
 }
 
@@ -50,6 +54,7 @@ aside{
     background-color: #f4f4f4;
     padding: 1em;
 }
+
 
 .destaque{
     color: darkred;
