--- a/Aula10/Flexbox/css/flexbox.css
+++ b/Aula10/Flexbox/css/flexbox.css
@@ -3,7 +3,7 @@
 #container{
     width: 100vw;
     height: 100vh;
-    background-color: black;
+    background-color: rgb(75, 68, 68);
 
     display: flex;
     flex-direction: row; /* row, row-reverse, column, column-reverse */
@@ -14,7 +14,13 @@
 }
 
 .item{
-    background-color: brown;
+    width: 100px;
+    height: 100px;
+    background-color: rgb(31, 8, 84);
     margin: 10px;
+    color: white;
+    text-align: center;
+    line-height: 100px;
+    font-size: 20px;
     /* height: 50px; */
 }
