--- a/Aula11/site/css/styles.css
+++ b/Aula11/site/css/styles.css
@@ -97,7 +97,7 @@ nav a:hover, nav a:focus {
 }
 
 /* Responsividade */
-/* @media (min-width: 768px) {
+@media (min-width: 768px) {
     .container {
         grid-template-areas:
             "header header"
@@ -130,5 +130,5 @@ nav a:hover, nav a:focus {
         flex-direction: column;
     }
 }
- */
+
 
